--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Transitions</string>
     <string name="title_activity_view_overlay">ViewOverlayActivity</string>
+    <string name="title_activity_override_pending_transition">OverridePendingTransition</string>
+    <string name="title_activity_content_transition">ContentTransition</string>
 </resources>
